<resources>
    <string name="app_name">SunNewsapp</string>


    <string name="_0">0</string>
    <string name="movies">News List</string>
    <string name="products">Breaking News Coming Soon...</string>
    <string name="Heros">Based on Breaking News</string>
    <string name="Heroins">Based on Headlines</string>
    <string name="fashion_life">Are you ready to see your dream movies today.\nJoin us</string>

    <string name="shortlist">Shortlist</string>
    <string name="recommend">Daily Recommendations</string>
    <string name="like">Like this?</string>

</resources>