<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="@dimen/dp_180">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:minWidth="@dimen/dp_260"
                android:minHeight="@dimen/dp_300"
                android:scaleType="fitXY"
                android:src="@drawable/screen1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameTxt"
                style="@style/Text.Bold.ExtraLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgData" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/DescriptionTxt"
                style="@style/Text.Regular.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorTextGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yesBtn"
                style="@style/ButtonStyleFilled1"
                android:layout_width="@dimen/dp_56"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textAlignment="center"
                app:icon="@drawable/ic_baseline_check_24"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescriptionTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/noBtn"
                style="@style/ButtonStyleFilled"
                android:layout_width="@dimen/dp_56"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:textAlignment="center"
                app:icon="@drawable/ic_baseline_close_24"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/yesBtn"
                app:layout_constraintEnd_toStartOf="@+id/yesBtn"
                app:layout_constraintTop_toBottomOf="@+id/DescriptionTxt" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/askTxt"
                style="@style/Text.Regular.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/like"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/noBtn"
                app:layout_constraintEnd_toStartOf="@+id/noBtn"
                app:layout_constraintTop_toTopOf="@+id/noBtn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/shortlistTxt"
                style="@style/Text.Regular.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_baseline_star_border_24"
                android:drawableTint="@color/black"
                android:text="@string/shortlist"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/noBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/noBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>